stage0/tests/compile_fail/misc/break_outside.dg
func main() -> i32 {
    break
    0
}
